modificato padding logo

--- a/m1/s1/g3/esercizio/css/style.css
+++ b/m1/s1/g3/esercizio/css/style.css
@@ -27,7 +27,7 @@ header{
     text-align: center;
 }
 header #logo{
-    padding-bottom:1rem;
+    padding: 2rem 0;
 }
 header p#special{
     color:#004D4C;
