--- a/m1/s1/g3/esercizio/css/style.css
+++ b/m1/s1/g3/esercizio/css/style.css
@@ -153,9 +153,9 @@ footer a{
     main #img{
         height: 400px;
     }
-    main section#principale div#featured-p{
+    /*main section#principale div#featured-p{
         height: 7rem;   
-    }
+    }*/
 }
 @media only screen and (min-width: 576px) and (max-width: 768px) {
     h1{
