modificato padding frase contenuta nell'header

--- a/m1/s1/g3/esercizio/css/style.css
+++ b/m1/s1/g3/esercizio/css/style.css
@@ -142,7 +142,7 @@ footer a{
         font-size:1rem;
     }
     header #frase{
-        padding:0 3rem;
+        padding: 1rem 3rem;
     }
     main,footer{
         margin: 0 3rem;
@@ -168,7 +168,7 @@ footer a{
         font-size:1rem;
     }
     header #frase{
-        padding:0 3rem;
+        padding: 1rem 3rem;
     }
     main,footer{
         margin: 0 3rem;
