modifica in esercizio g3 e commit esercizio personale g4

--- a/m1/s1/g3/esercizio/css/style.css
+++ b/m1/s1/g3/esercizio/css/style.css
@@ -52,7 +52,7 @@ main h1{
     font-weight: bold;
 }
 main #img{
-    background: url(/g3/esercizio/img/focaccia.png) no-repeat center center/cover;
+    background: url(../img/focaccia.png) no-repeat center center/cover;
     height: 525px;
     border-radius: 12px;
     margin: auto;
