aggiunta class="data-right" allineamento a destra per le date

--- a/m1/s1/g4/esercizio-personale/css/style.css
+++ b/m1/s1/g4/esercizio-personale/css/style.css
@@ -72,6 +72,9 @@ main article{
 main p{
     padding-bottom: 1rem;
 }
+main p.data-right{
+    text-align: right;
+}
 main p#crediti{
     padding:1rem 0;
     color:#96A49F;
