implementazione regole css footer

--- a/m1/s1/g5/progetto/desktop-responsive/css/style.css
+++ b/m1/s1/g5/progetto/desktop-responsive/css/style.css
@@ -63,7 +63,17 @@ p{
 /* ASIDE */
 
 /* FOOTER */
-
+footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+footer div#contatti{
+    display: flex;
+    flex-direction: column;
+}
+/* FOOTER */
 /* RESPONSIVE */
 @media only screen and (min-width: 768px) and (max-width: 1920px) {
 /* HEADER */
