--- a/m2/s1/g4/rotazione-parole/css/frase.css
+++ b/m2/s1/g4/rotazione-parole/css/frase.css
@@ -1,13 +1,37 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
-#testoAlternato{
-    border:2px solid black;
+
+#testoAlternato {
+    border: 2px solid black;
     width: 500px;
-    padding:1rem
+    padding: 1rem
 }
+
 i{
-    color:rgb(105,157,178);
+    color: rgb(105, 157, 178);
+    display: inline-block;
 }
+
+.slideInDown {
+    animation: slideInDown 1s ease-in-out;
+    animation-fill-mode: forwards;
+    visibility: hidden;
+    animation-iteration-count:infinite ;
+    opacity: 0;
+}
+
+@keyframes slideInDown {
+    0% {
+      transform: translate3d(0, -100%, 0);
+      visibility: visible;
+      animation-delay: 0s;
+    }
+    100% {
+      transform: translate3d(0, 0, 0);
+      animation-delay: calc(0.2s * var(--i));
+      opacity: 1;
+    }
+  }
